[package]
name = "godot-https-server"
version = "0.1.0"
edition = "2021"
[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
rustls = "0.21"
tokio-rustls = "0.24"
rcgen = "0.11"
tokio-util = { version = "0.7", features = ["io"] }
rustls-pemfile = "1.0"
futures = "0.3"
mime_guess = "2.0"  # 新增的MIME类型检测库